# whl-diagnosis

./: MANIFEST.in  README.md  pyproject.toml
config/: vehicle_topology.yaml
config/schemas/: topology_schema.json 
docs/: dataflow-module-responsibility.md
src/: cli.py
src/api/: server.py
src/core/: config_loader.py  diagnostic_workflow.py  engine.py  error_codes.py  fingerprint.py  history.py  interface.py  logger.py  metrics_exporter.py  probe_catalog.py  reporter.py
src/execution/: interface.py  probe_catalog.py
src/knowledge/: __init__.py
src/modules/: camera_probe.py  can_probe.py  gnss_probe.py  gpu_probe.py  lidar_probe.py  network_probe.py  system_probe.py
src/output/: metrics.py  reporter.py
src/probe/compute/: gpu_probe.py
src/probe/network/: can_probe.py  network_probe.py  ptp_probe.py
src/probe/sensors/: camera_probe.py  gnss_probe.py  lidar_probe.py
src/probe/software/: system_probe.py
src/state/: fingerprint.py
src/utils/: shell_runner.py  time_utils.py
tests/: test_camera_probe.py  test_engine.py  test_network_probe.py  test_ptp_probe.py  test_system_probe.py  test_workflow.py
whl_diag/: cli.py
whl_diag/api/: server.py
whl_diag/config/: loader.py
whl_diag/core/: config_loader.py  diagnostic_workflow.py  engine.py  error_codes.py  fingerprint.py  history.py  interface.py  logger.py  metrics_exporter.py  probe_catalog.py  reporter.py
whl_diag/execution/: engine.py  probe_catalog.py
whl_diag/knowledge/: error_codes.py
whl_diag/probe/compute/: gpu_probe.py
whl_diag/probe/sensors/: gnss_probe.py  lidar_probe.py
(+13 files in other folders)
